apps/web/styles/globals.css
@import 'tailwindcss';
@config '../tailwind.config.js';

@import './fonts.css' layer(utilities);
@import './prism.css' layer(utilities);
@import '@pdfslick/react/dist/pdf_viewer.css' layer(utilities);

@utility hidescrollbar {
  &::-webkit-scrollbar {
    display: none;
  }
}

@utility customscrollbars {
  &::-webkit-scrollbar {
    width: 7px;
    height: 7px;
  }

  &::-webkit-scrollbar-button {
    width: 0;
    height: 0;
    display: none;
  }

  &::-webkit-scrollbar-corner {
    background-color: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.2);
    -webkit-box-shadow:
      inset 1px 1px 0px rgb(0 0 0 / 10%),
      inset 0px -1px 0px rgb(0 0 0 / 7%);
  }
}

@layer components {
  #__next {
    @apply h-full;
  }
  html,
  body {
    @apply h-full;
  }


  /* Pin icon Styles */

  .pin-icon {
    @apply w-5 h-5 text-[#6b7e98] hover:text-[#100F0F] cursor-pointer;
  }
  /* Comment Box Styles */

  .comment-box {
    @apply w-73 absolute left-3 top-3 bg-[#ffffff] rounded shadow-[0px_3px_2px_0px_rgba(0,0,0,0.05)] border-[1.50px] border-slate-300;
  }

  .comment-title {
    @apply text-black text-base font-normal font-['Inter'];
  }

  .comment-close {
    @apply w-4 h-4 text-[#62748E] hover:text-black;
  }

  .comment-name-input {
    @apply w-[calc(100%-20px)] h-5 bg-white rounded-sm border border-slate-300 text-sm px-2;
  }

  .comment-input {
    @apply w-[calc(100%-20px)] min-h-14 bg-white rounded-sm border border-slate-300 text-sm resize-y px-2;
    field-sizing: content;
    word-wrap: break-word;
    overflow-wrap: break-word;
    white-space: pre-wrap;
    overflow: auto;
  }

  .comment-btn-container {
    @apply w-16 h-6 rounded-sm cursor-pointer bg-white shadow-[-1px_1px_2px_0px_rgba(0,0,0,0.07)] border border-slate-300 hover:bg-gray-100 transition-colors duration-200 flex items-center justify-center;
  }

  .comment-btn-text {
    @apply text-gray-400 text-[13px] font-normal font-['Inter'];
  }

  /* View Comment Styles */

  .comment-header {
    @apply flex items-center justify-between mb-3;
  }

  .comment-author {
    @apply flex items-center gap-3;
  }

  .comment-author-sidebar {
    @apply gap-1;
  }

  .comment-author-avatar {
    @apply rounded-full flex-shrink-0;
    width: clamp(1.75rem, 3vw, 2.5rem);
    height: clamp(1.75rem, 3vw, 2.5rem);
  }

  .comment-authorname {
    @apply text-black font-normal font-['Inter'];
    font-size: clamp(0.8rem, 1.2vw, 1rem);
  }

  .comment-date {
    @apply text-neutral-500 font-light font-['Inter'];
    font-size: clamp(0.7rem, 1vw, 0.8rem);
  }

  .comment-actions {
    @apply flex gap-2 mt-[-40];
  }

  .comment-icon {
    @apply w-5 h-5 text-[#62748E] hover:text-[#100F0F] cursor-pointer;
  }

  .comment-divider {
    @apply w-full h-0 border-t border-slate-300 mb-3;
  }

  .comment-content {
    @apply w-full text-black text-base font-light font-['Inter'] mb-4 ml-1;
  }

  .comment-footer {
    @apply flex justify-end;
  }

  .comments-panel {
    @apply relative flex-none h-full p-5 overflow-y-auto bg-slate-50 border-l border-[#CAD5E2];
    width: clamp(17.5rem, 25vw, 24.5rem);
  }

  @media (max-width: 640px) {
    .comments-panel {
      position: fixed;
      top: 2.25rem;
      right: 0;
      bottom: 0;
      width: 100vw;
      z-index: 20;
    }
  }

  .comments-panel-close {
    @apply w-4 h-4 right-[28px] top-[28px] absolute cursor-pointer text-[#62748E] hover:text-black;
  }
}

